Minor CSS adjustments

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <h1 class="titles" style="text-align: center;">Minha <span>linha do tempo</span></h1>
         <div class="container">
             <div class="timeline-block timeline-block-right">
-                <div class="marker"></div>
+                <div class="marker" onclick="changeStatus('2018')"></div>
                     <div class="timeline-content" onclick="changeStatus('2018')">
                     <h3>2018</h3>
                     <span>Fim do ensino médio</span>
@@ -78,7 +78,7 @@
             </div>
 
             <div class="timeline-block timeline-block-left">
-                <div class="marker"></div>
+                <div class="marker" onclick="changeStatus('2019')"></div>
                 <div class="timeline-content" onclick="changeStatus('2019')">
                     <h3>2019</h3>
                     <span>Ingresso na faculdade</span>
@@ -89,7 +89,7 @@
             </div>
 
             <div class="timeline-block timeline-block-right">
-                <div class="marker"></div>
+                <div class="marker" onclick="changeStatus('2020')"></div>
                 <div class="timeline-content" onclick="changeStatus('2020')">
                     <h3>2020</h3>
                     <span>Programa de Familiarização do Hospital Psiquiátrico São Pedro</span>
@@ -100,7 +100,7 @@
             </div>
 
             <div class="timeline-block timeline-block-left">
-                <div class="marker"></div>
+                <div class="marker" onclick="changeStatus('2021')"></div>
                 <div class="timeline-content" onclick="changeStatus('2021')">
                     <h3>2021</h3>
                     <span>Estágio Psicopato</span>
