--- a/index.html
+++ b/index.html
@@ -21,27 +21,28 @@
         <div class="show-mobile" style="display:none;clear: both;"></div>
         <a style="display: none;text-align: center;" class="show-mobile" onclick="changeStatus('menu-options')">Menu</a>
         <div class="header-right" id="menu-options">
-          <a onclick="jump('sobremim-section')">Sobre mim</a>
+          <a onclick="jump('aboutme-section')">Sobre mim</a>
           <a onclick="jump('timeline')">Linha do tempo</a>
-          <a onclick="jump('experiencia')">Experiência</a>
+          <a onclick="jump('experience')">Experiência</a>
           <a onclick="jump('contacts')">Contatos</a>
         </div>
     </div>
-    <a onclick="jump('header')" class="go-up-btn hide-mobile"><i class="fa fa-arrow-up"></i></a>
+    <a onclick="navigate('up')" class="go-up-btn hide-mobile"><i class="fa fa-arrow-up"></i></a>
+    <a onclick="navigate('down')" class="go-down-btn hide-mobile"><i class="fa fa-arrow-down"></i></a>
     
-    <br class="hide-mobile"><br id="sobremim-section"><br>
+    <br class="hide-mobile"><br id="aboutme-section"><br>
         <div class="row" style="margin: 0;">
             <br>
             <div class="col-md-2 hide-mobile"></div>
             <div class="col-md-4 col-sm-12">
                 <h3 class="titles">
-                    <a id="sobremim-title" style="cursor: pointer;" onclick="changeText('sobremim')">Sobre mim</a> 
+                    <a id="aboutme-title" style="cursor: pointer;" onclick="changeText('aboutme')">Sobre mim</a> 
                     <span style="cursor: pointer;">
                     <a id="hobbies-title" style="opacity: 30%; text-decoration: none;padding-left: 3%;" onclick="changeText('hobbies')">Hobbies</a>
                     </span>
                 </h3>
                 <hr>
-                <p id="sobremim-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean tempus maximus erat, non gravida ipsum euismod et. 
+                <p id="aboutme-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean tempus maximus erat, non gravida ipsum euismod et. 
                     Etiam mattis sit amet erat sed semper. Etiam lacinia varius hendrerit. Aenean iaculis orci sit amet risus molestie, at tincidunt ligula laoreet. 
                     Sed varius ante eget ex mollis, vitae tincidunt purus molestie. Nunc quis lorem vitae orci rhoncus mattis.</p> 
                 <p id="hobbies-text" style="display: none;">Aenean iaculis orci sit amet risus molestie, at tincidunt ligula laoreet. 
@@ -114,7 +115,7 @@
             <div class="row" style="margin: 0;">
                 <div class="col-md-2"></div>
                 <div class="col-md-8">
-                    <br><br id="experiencia">
+                    <br><br id="experience">
                     <h1 class="titles" style="text-align: center;">Minha <span>experiência</span></h1>
                     <br><br>
                     <div class="row">
@@ -178,6 +179,17 @@ window.onload = function() {
     getAge();
 }
 
+function isElementInViewport (id) {
+    var el = document.getElementById(id);
+    var rect = el.getBoundingClientRect();
+
+    return (
+        rect.top >= 0 &&
+        rect.left >= 0 &&
+        rect.bottom <= (window.innerHeight || document.documentElement.clientHeight) &&
+        rect.right <= (window.innerWidth || document.documentElement.clientWidth) 
+    );
+}
 
 function detectMob() {
     return ( ( window.innerWidth <= 900 ) && ( window.innerHeight <= 900 ) );
@@ -187,12 +199,25 @@ function detectMed() {
     return ( ( window.innerWidth >= 900 ) && ( window.innerHeight >= 500 ) && ( window.innerHeight <= 800 ) );
 }
 
+function navigate(direction) {
+    var elements = ["aboutme-section", "timeline", "experience", "contacts"];
+
+    for(var i = 0; i < elements.length; i++){
+        if(isElementInViewport(elements[i])){
+            if(direction == 'up' && i!=0){
+                jump(elements[i-1]);
+            }else if(direction == 'down' && i!=(elements.length-1)){
+                jump(elements[i+1]);
+                break;
+            }
+        }
+    }
+}
+
 function jump(h){
     var yOffset = -150; 
     var element = document.getElementById(h);
     var y = element.getBoundingClientRect().top + window.pageYOffset + yOffset;
-    console.log(window.innerHeight);
-    console.log(window.innerWidth);
 
     if(detectMob()){
         yOffset = -170;
@@ -222,13 +247,13 @@ function changeText(option){
     if(option === "hobbies"){
         document.getElementById("hobbies-title").style.opacity = '100%';
         document.getElementById("hobbies-text").style.display = 'block';
-        document.getElementById("sobremim-title").style.opacity = '30%';
-        document.getElementById("sobremim-text").style.display = 'none';
+        document.getElementById("aboutme-title").style.opacity = '30%';
+        document.getElementById("aboutme-text").style.display = 'none';
     } else{
         document.getElementById("hobbies-title").style.opacity = '30%';
         document.getElementById("hobbies-text").style.display = 'none';
-        document.getElementById("sobremim-title").style.opacity = '100%';
-        document.getElementById("sobremim-text").style.display = 'block';
+        document.getElementById("aboutme-title").style.opacity = '100%';
+        document.getElementById("aboutme-text").style.display = 'block';
     }
 }
 
