--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     Sed varius ante eget ex mollis, vitae tincidunt purus molestie. Nunc quis lorem vitae orci rhoncus mattis.</p>
             </div>
             <div class="col-md-2 col-sm-12" style="display: flex; justify-content: center;align-items: center;">
-                <center><img src="img/clara.png" class="profile-img" style="margin-bottom: 5%;" width="100%"></center>
+                <center><img src="img/clara.png" class="profile-img" id="profile-img" style="margin-bottom: 5%;" width="100%"></center>
             </div>
             <div class="col-md-3">
                 <div>
@@ -206,9 +206,12 @@ function navigate(direction) {
         if(isElementInViewport(elements[i])){
             if(direction == 'up' && i!=0){
                 jump(elements[i-1]);
-            }else if(direction == 'down' && i!=(elements.length-1)){
+            }
+            else if(direction == 'down' && i!=(elements.length-1)){
                 jump(elements[i+1]);
                 break;
+            }else if(direction == 'down' && i==3){
+                jump(elements[3]);
             }
         }
     }
